# efm-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/efm/include/: audio.h  delay_lines.h  efm.h  frame.h  frame_metadata.h  interleave.h  inverter.h  logging.h  reedsolomon.h  section.h  section_metadata.h  sector.h  subcode.h  tvalues.h
libs/efm/src/: audio.cpp  delay_lines.cpp  efm.cpp  frame.cpp  frame_metadata.cpp  interleave.cpp  inverter.cpp  logging.cpp  reedsolomon.cpp  section.cpp  section_metadata.cpp  subcode.cpp  tvalues.cpp
tools/efm-decoder/: CMakeLists.txt
tools/efm-decoder-audio/src/: efm_processor.cpp  efm_processor.h  main.cpp
tools/efm-decoder-d24/src/: efm_processor.cpp  main.cpp
tools/efm-decoder-data/src/: efm_processor.cpp  efm_processor.h  main.cpp
tools/efm-decoder/src/: dec_audiocorrection.cpp  dec_audiocorrection.h  dec_channeltof3frame.cpp  dec_channeltof3frame.h  dec_data24toaudio.cpp  dec_data24toaudio.h  dec_f1frametodata24.cpp  dec_f1frametodata24.h  dec_f1sectiontodata24section.cpp  dec_f1sectiontodata24section.h  dec_f2frametof1frame.cpp  dec_f2frametof1frame.h  dec_f2sectioncorrection.cpp  dec_f2sectioncorrection.h  dec_f2sectiontof1section.cpp  dec_f2sectiontof1section.h  dec_f3frametof2section.cpp  dec_f3frametosection.h  (+19 more)
tools/efm-encoder/: CMakeLists.txt
tools/efm-encoder/src/: data24.cpp  efm_processor.cpp  efm_processor.h  enc_data24sectiontof1section.cpp  enc_data24sectiontof1section.h  enc_data24tof1frame.cpp  enc_data24tof1frame.h  enc_f1frametof2frame.cpp  enc_f1frametof2frame.h  enc_f1sectiontof2section.cpp  enc_f1sectiontof2section.h  enc_f2frametosection.cpp  enc_f2frametosection.h  enc_f2sectiontof3frames.cpp  enc_f2sectiontof3frames.h  enc_f3frametochannel.cpp  enc_f3frametochannel.h  enc_sectiontof3frame.cpp  enc_sectiontof3frame.h  encoders.cpp  encoders.h  main.cpp
tools/efm-sector-decoder/: CMakeLists.txt
(+68 files in other folders)
